--- a/simuladorBsim/templates/base/base.html
+++ b/simuladorBsim/templates/base/base.html
@@ -4,12 +4,15 @@
 <head>
 	<meta charset="UT8-8">
 
+{%block extrahead %}  
+
+{% endblock %}
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+
   
 	
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-	
   <!--<link rel="stylesheet" type="text/css" href="{static 'css/bootstrap.min.css'}">-->
-	<title>{% block title%} Documentt {% endblock %}</title>
+	<title>{% block title%} Bsim {% endblock %}</title>
 
 	{% block navbar %}
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -50,6 +53,32 @@
    {% endblock %}﻿	
 </head>
 <body>
+
+  <style>
+  
+#playground-container {
+    height: 500px;
+    overflow: hidden !important;
+    
+}
+.main{margin-top:70px;
+-webkit-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.24);
+-moz-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.24);
+box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.24);
+padding:0px;
+}
+.fb:focus, .fb:hover{color:FFF !important;}
+body{
+background-image:url();
+background-repeat: no-repeat;
+background-attachment: fixed;
+background-size: cover;
+
+
+}
+
+</style>
+
 	{% block header %}
 	{% include 'base/header.html' %}
 	{% endblock %}
@@ -59,17 +88,18 @@
 	{% endblock %}
 
 	{% block footer %}
-	<h6> pruebafooter base</h6>
+	<h6> </h6>
 	{% endblock %}
 
 
 
- <-script scr = "https://code.jquery.com/jquery-3.3.1.min.map"><=/script>
 
- <-script src="{% static 'js/bootstrap.min.js'}"><-/script>
 
 
 	{% block extrajs %}
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
   
 	{% endblock %}
 
